# backend-django-HW

./: API_GUIDE.md  README.md  SUMMARY.md  db.sqlite3  main.py  pyproject.toml  start.sh  test_api.py  test_swagger.py
myapps/: settings.py  urls.py
myapps/myapps/: admin.py  apps.py  models.py  serializers.py  views.py
myapps/myapps/migrations/: 0001_initial.py
